modules/cli/src/test/resources/good/misc/globals/grecursion/Recursion04.scr
module good.misc.globals.grecursion.Recursion04;


global protocol Recursion4(role A, role B)
{
	rec X
	{
		l1() from A to B;
		rec Y
		//rec X  // Uncomment bad, even if above line is commented
		{
			l2() from B to A;
			continue X;
			//continue Y;  // Uncomment OK if the above line is commented
		}
	}
}

