modules/cli/src/test/resources/bad/syntax/disamb/recvarnode/Recursion05b.scr
module bad.syntax.disamb.recvarnode.Recursion05b;


global protocol Recursion5b(role A, role B)
{
	rec X
	{
		l1() from A to B;
		//continue X;  // Uncomment makes the below rec bad
		continue Y;  // Uncomment bad
	}
	rec Y
	{
		l2() from B to A;
		continue Y;  // A bad "continue X" here tested in Recursion11
	}
}

